--- a/styles.css
+++ b/styles.css
@@ -92,18 +92,30 @@ header h2 {
     color: white;
     text-align: center;
     width: 64%;
+    height: 100%;
+    background-color: rgba(1, 22, 39, 0.7);
 }
 
-#selector.row.sm {
-    width: 30vw;
-    height: 20vh;
+#selector .row.sm {
+    width: 100%;
+    height: 20%;
     box-sizing: border-box;
-    border: 3px solid yellow;
-    background-color: red;
 }
 
-#selector.row.lg {
+#selector .row.sm .col {
+    display: inline-block;
+    float: left;
+    width: 20%;
+    height: 100%;
+    box-sizing: border-box;
+    border: rgb(78, 78, 64) 1px solid;
+}
 
+#selector .row.lg {
+    width: 100%;
+    height: 60%;
+    box-sizing: border-box;
+    border: rgb(78, 78, 64) 1px solid;
 }
 
 footer {
