--- a/styles.css
+++ b/styles.css
@@ -37,10 +37,21 @@ header h2 {
 
 }
 #chaos {
-    color: cyan;
-}
-#order {
     color: #D33F49;
+}
+
+
+
+#selector .row.sm.blue {
+    background-color: rgba(0, 255, 255, 0.6);
+}
+
+#selector .row.sm.red {
+    background-color: rgba(211, 63, 73, 0.6);
+}
+
+#order {
+    color: cyan;
 }
 
 .column {
