--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,14 @@ header h2 {
 
 
 #selector .row.sm.blue {
+    width: 49%;
+    display: inline-block;
     background-color: rgba(0, 255, 255, 0.6);
 }
 
-#selector .row.sm.red {
+#selector .row.md.red {
+    width: 40%;
+    display: inline-block;
     background-color: rgba(211, 63, 73, 0.6);
 }
 
@@ -105,18 +109,61 @@ header h2 {
     width: 64%;
     height: 100%;
     background-color: rgba(1, 22, 39, 0.7);
+    margin: 0 auto;
+}
+
+.teamPicks {
+    width: 50%;
+    height: 40%;
+    border: 1px yellow solid;
+    box-sizing: border-box;
+    float: left;
+}
+
+.teamPicks .row {
+    width: 100%;
+    height: 50%;
+    border: 1px greenyellow solid;
+    box-sizing: border-box;
+    padding: 3vh auto;
+}
+
+.teamPicks .row.round2 .pick {
+    width: 30%;
+    height: 70%;
+    border: 1px greenyellow solid;
+    box-sizing: border-box;
+    margin: 3vh 0;
+    margin-left: 1vw;
+    float: left
+}
+
+.teamPicks.flr .row.round2 .pick {
+    float: right;
+    margin-left: 0;
+    margin-right: 1vw;
+}
+
+.teamPicks .row.round1 .pick {
+    width: 30%;
+    height: 70%;
+    border: 1px greenyellow solid;
+    box-sizing: border-box;
+    margin: 3vh 0;
+    margin-left: .6vw;
+    float: left
 }
 
 #selector .row.sm {
     width: 100%;
-    height: 20%;
+    height: 10%;
     box-sizing: border-box;
 }
 
 #selector .row.sm .col {
     display: inline-block;
-    float: left;
-    width: 20%;
+    width: 30%;
+    background-color: orange;
     height: 100%;
     box-sizing: border-box;
     border: rgb(78, 78, 64) 1px solid;
