--- a/styles.css
+++ b/styles.css
@@ -141,9 +141,20 @@ header h2 {
     float: left
 }
 
+#typeSelector {
+    width: 100%;
+    height: 10%;
+}
+
+#typeSelector .type {
+    width: 20%;
+    float: left;
+}
+
 #picks {
     color: #fff;
     font-size: 3rem;
+    height: 90%;
     overflow-y: scroll;
 
 }
