--- a/styles.css
+++ b/styles.css
@@ -65,10 +65,10 @@ header h2 {
     height: 100%;
 }
 .column.small {
-    width: 18%;
+    width: 7.5%;
 }
 .column.large {
-    width: 64%;
+    width: 100%;
   
 }
 .teamNames {
@@ -92,11 +92,11 @@ header h2 {
     border: 2px solid rgb(78, 78, 64);
     height: 20%;
     box-sizing: border-box;
-    opacity: 60%;
+    text-align: center;
 }
 
 .player.red {
-    background-color: #D33F49;
+    background-color: rgba(211, 63, 73, 0.6);
 }
 
 .player.blue {
@@ -106,7 +106,7 @@ header h2 {
 #selector {
     color: white;
     text-align: center;
-    width: 64%;
+    width: 85%;
     height: 100%;
     background-color: rgba(1, 22, 39, 0.7);
     margin: 0 auto;
@@ -130,15 +130,14 @@ header h2 {
 .teamPicks .pick {
     box-sizing: border-box;
     border: 1px solid white;
+    width: 20%;
+    height: 70%;
+    float: left;
+    margin: 0 1vw;
 }
 
-.teamPicks .row.round2 .pick {
-    width: 30%;
-    height: 70%;
-    box-sizing: border-box;
-    margin: 3vh 0;
-    margin-left: 1vw;
-    float: left
+.teamPicks .row.round2.last .pick, .teamPicks .row.round1.last .pick {
+    float: right;
 }
 
 #typeSelector {
@@ -155,13 +154,28 @@ header h2 {
     color: #fff;
     font-size: 3rem;
     height: 90%;
-    overflow-y: scroll;
+    overflow-y: hidden;
+}
 
+.player .god {
+    height: 100%;
+    width: 100%;
+}
+
+
+.player .god p {
+    background-color: black;
+    color: white;
+    margin: 0;
+}
+
+.player .god img {
+    height: 90%;
 }
 
 #picks .god {
     background-color: rgba(64, 74, 74, 0.6);
-    width: 10%;
+    width: 7%;
     height: 30%;
     float: left;
     font-size: .75rem;
@@ -173,24 +187,21 @@ header h2 {
     margin: 1vh 0;
 }
 
+.pick .god {
+    height: 100%;
+}
+
+.pick .god p {
+    margin: 0;
+}
+
+.pick .god img {
+    height: 80%;    
+}
+
 .god img {
     width: 100%;
     height: 80%;
-}
-
-.teamPicks.flr .row.round2 .pick {
-    float: right;
-    margin-left: 0;
-    margin-right: 1vw;
-}
-
-.teamPicks .row.round1 .pick {
-    width: 30%;
-    height: 70%;
-    box-sizing: border-box;
-    margin: 3vh 0;
-    margin-left: .6vw;
-    float: left
 }
 
 #selector .row.sm {
