--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,25 @@ header h2 {
     color: #D33F49;
 }
 
+.hunter {
+    background-color: rgb(208, 119, 3)
+}
+
+.mage {
+    background-color: rebeccapurple
+}
+
+.guardian {
+    background-color: green
+}
+
+.warrior {
+    background-color: rgb(155, 0, 0)
+}
+
+.assassin {
+    background-color: rgb(255, 255, 0)
+}
 
 
 #selector .row.sm.blue {
@@ -144,13 +163,14 @@ header h2 {
 #typeSelector {
     width: 100%;
     height: 10%;
+    color: black;
 }
 
 #typeSelector .type {
     width: 20%;
     float: left;
     padding: 1vh 0;
-    border: 1px solid white;
+    border: 1px solid black;
     box-sizing: border-box;
 }
 
