--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,6 @@ header h2 {
     text-align: center;
     width: 80%;
     height: 100%;
-    background-color: rgba(1, 22, 39, 0.7);
     margin: 0 auto;
 }
 
@@ -172,10 +171,12 @@ header h2 {
     padding: 1vh 0;
     border: 1px solid black;
     box-sizing: border-box;
+    font-size: 1.3em;
 }
 
 #typeSelector .type:hover {
-    background: white;
+    opacity: 0.8;
+    background-color: white;
     color: black;
 }
 
@@ -184,6 +185,7 @@ header h2 {
     font-size: 3rem;
     height: 90%;
     overflow-y: auto;
+    margin-left: 4vw
 }
 
 .player .god {
@@ -204,7 +206,7 @@ header h2 {
 
 #picks .god {
     background-color: black;
-    width: 14%;
+    width: 12%;
     height: 35%;
     float: left;
     font-size: .75rem;
